Buscador con iconos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="google-logo">
                 <img src="./assets/google-logo.png" alt="Logo-Google">
             </div>
-            <input type="search" name="search-box" id="">
+            <input type="search" class="search-box" name="search-box" id="">
             
             <div class="buttons">
                 <button class="btn-main">Buscar con Google</button>
