--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </div>
     
             <div class="message">
-                <img src="" alt="" class="owl">
-                <p>Ayudemos a los niños a ser geniales en internet</p>
-                <p>Ofrecido por Google en: English</p>
+                <img src="./assets/owl.png" width="50px" alt="" class="owl">
+                <p><a href="#">Ayudemos a los niños a ser geniales en internet</a></p>
             </div>
+            <p class="offered">Ofrecido por Google en: <a href="#">English</a></p>
         </div>
     </main>
 
