Sintaxis HTML e iconos en Header

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <body>
     
     <header>
-        <div class="container-header">
-            <p>Gmail</p>
-            <p>Imágenes</p>
-            <img src="./assets/menu.png" class="menu" alt="Menu">
-            <img src="./assets/profile.jpg" class="profile" alt="Profile-Picture">
-        </div>
+        <nav>
+            <ul>
+                <li><p>Gmail</p></li>
+                <li><p>Imágenes</p></li>
+                <li class="menu-icon">
+                    <a href=""></a>
+                </li>
+                <li class="profile-pic">
+                    <a href=""></a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
