Fixing the main section and buttons

--- a/index.html
+++ b/index.html
@@ -26,23 +26,27 @@
     </header>
 
     <main>
-        <div class="container-main">
-            <div class="google-logo">
-                <img src="./assets/google-logo.png" alt="Logo-Google">
+        <section class="main-logo">
+            <img src="./assets/google-logo.png" alt="Google Logo">
+        </section>
+
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+                </span>
+                <input type="text" name="" id="">
+                <a href="" class="mic-icon"></a>
             </div>
-            <input type="search" class="search-box" name="search-box" id="">
-            
-            <div class="buttons">
-                <button class="btn-main">Buscar con Google</button>
-                <button class="btn-main">Me siento con suerte</button>
+        </section>
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
             </div>
-    
-            <div class="message">
-                <img src="./assets/owl.png" width="50px" alt="" class="owl">
-                <p><a href="#">Ayudemos a los niños a ser geniales en internet</a></p>
-            </div>
-            <p class="offered">Ofrecido por Google en: <a href="#">English</a></p>
-        </div>
+
+            <div>
+                <button>Me siento con suerte</button>
+            </div>            
+        </section>
     </main>
 
     <footer>
