Fixing the footer

--- a/index.html
+++ b/index.html
@@ -54,21 +54,17 @@
             <p>Chile</p>
         </div>
         <div class="row2">
-            <div class="col1">
-                <ul>
-                    <li>Sobre Google</li>
-                    <li>Publicidad</li>
-                    <li>Negocios</li>
-                    <li>Cómo funciona la Búsqueda</li>
-                </ul>
-            </div>
-            <div class="col2">
-                <ul>
-                    <li>Privacidad</li>
-                    <li>Condiciones</li>
-                    <li>Preferencias</li>
-                </ul>
-            </div>
+            <ul class="col1">
+                <li><a href="#">Sobre Google</a></li>
+                <li><a href="#">Publicidad</a></li>
+                <li><a href="#">Negocios</a></li>
+                <li><a href="#">Cómo funciona la Búsqueda</a></li>
+            </ul>
+            <ul class="col2">
+                <li><a href="#">Privacidad</a></li>
+                <li><a href="#">Condiciones</a></li>
+                <li><a href="#">Preferencias</a></li>
+            </ul>
         </div>
     </footer>
 </body>
